gave close-modal individual classes to resolve overlapping click events

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -207,13 +207,17 @@ body{
 .nav_bar_wrapper{
   border:1px solid black;
   height:50px;
-  margin-bottom:150px;
+  margin-bottom:20px;
   cursor: pointer;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
+
+  a{
+    color:#000;
+  }
 }
 
 .nav-bar-list{
@@ -228,6 +232,7 @@ body{
 }
 
 .nav-bar-list li{
+  color:#000;
   font: bold 12px/18px sans-serif;
   display: inline-block;
   margin-right: -4px;
@@ -263,11 +268,12 @@ body{
   -ms-transition: opacity 0.2s;
   -o-transition: opacity 0.2s;
   -transition: opacity 0.2s;
+  z-index: 100;
 }
 
 .nav-menu-dropdown{
   display: block; 
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.9);
   /*text-shadow: 0 -1px 0 #000;*/
 }
 
@@ -276,7 +282,7 @@ body{
 }
 
 .nav-menu-dropdown:hover{
-  background-color:rgba(255,255,255,0.5);
+  background-color:rgba(255,255,255,0.9);
 }
 
 ul li:hover ul {
